# cmd-debug

./: README.md  vsdebug
cmd-dbg/: CHANGELOG.md  README.md  package-lock.json  package.json
cmd-dbg/src/: extension.ts
python/: LICENSE  README.md  pyproject.toml  vsdebug
python/src/vsdebug/: __init__.py
python/src/vsdebug.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/vsdebug.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
